--- a/_list_guest.html
+++ b/_list_guest.html
@@ -91,7 +91,7 @@ $mi->fdb_style='fdb_v2';
 			<a cond="!$oDocument->getMemberSrl() && $oDocument->isExistsHomepage()" href="{$oDocument->getHomepageUrl()}" onclick="window.open(this.href);return false">{$oDocument->getNickName()}</a>
 			<b cond="!$oDocument->getMemberSrl() && !$oDocument->isExistsHomepage()">{$oDocument->getNickName()}</b>
 			<a cond="$oDocument->getMemberSrl()" href="#popup_menu_area" class="member_{$oDocument->get('member_srl')}" onclick="return false">{$oDocument->getNickName()}</a>
-			<span class="date">{getTimeGap($oDocument->get('regdate'), "Y.m.d H:i")}</span><small cond="$grant->manager || $mi->display_ip_address=='Y'" class="m_no">({$oDocument->getIpaddress()})</small>
+			<span class="date">{getTimeGap($oDocument->get('regdate'), "Y.m.d H:i")}</span><small cond="$grant->manager && $mi->display_ip_address == 'Y'" class="m_no">({$oDocument->getIpaddress()})</small>
 			<span cond="$oDocument->isSecret()" class="ico_secret">SECRET</span>
 		</div>
 		<!--// 본문 -->
