--- a/_read.html
+++ b/_read.html
@@ -84,7 +84,7 @@
 					</block>
 				</div>
 				<div class="side fr">
-					<small cond="$grant->manager || $mi->display_ip_address" class="m_no"><!--@if($grant->is_admin)--><a href="https://ko.infobyip.com/ip-{$oDocument->getIpaddress()}.html" target="_blank">({$oDocument->getIpaddress()})</a><!--@else-->({$oDocument->getIpaddress()})<!--@end--> </small>
+					<small cond="$grant->manager && $mi->display_ip_address == 'Y'" class="m_no"><!--@if($grant->is_admin)--><a href="https://ko.infobyip.com/ip-{$oDocument->getIpaddress()}.html" target="_blank">({$oDocument->getIpaddress()})</a><!--@else-->({$oDocument->getIpaddress()})<!--@end--> </small>
 					<a cond="$mi->rd_link=='3'" class="link m_no" href="{$oDocument->getPermanentUrl()}">{$oDocument->getPermanentUrl()}</a>
 					<a cond="$mi->rd_nick=='3'" href="#popup_menu_area" class="nick member_{$oDocument->get('member_srl')}" onclick="return false">{$oDocument->getNickName()}</a>
 					<span cond="$mi->rd_date=='3'" class="date">{$oDocument->getRegdate('Y.m.d H:i')}</span>
