--- a/_notice.html
+++ b/_notice.html
@@ -1,6 +1,7 @@
 <!--@if($mi->default_style=='list')--><!--@else--><table class="bd_lst bd_tb_lst bd_tb common_notice"><!--@end-->
-	<tr loop="$notice_list=>$no,$document" class="notice">
-		<td $list_config['no']">{$lang->notice}</td>
+	<tr loop="$notice_list=>$no,$document" class="notice<!--@if($document->get('hot_document'))--> hot<!--@end-->">
+		<td cond="$list_config['voted_count']"><!--@if($document->get('hot_document'))-->인기<!--@else-->{$document->get('voted_count')>0?$document->get('voted_count'):'0'}<!--@end--></td>
+		<td cond="$category_list">{$category_list[$document->get('category_srl')]->title}</td>
 		<td class="title">
 			<!--// 공지사항 일반 출력 -->
 			<a cond="$mi->notice_view_slide ==''" href="{getUrl('document_srl',$document->document_srl, 'listStyle', $listStyle, 'cpage','')}">
@@ -53,10 +54,9 @@
 					</style>
 			</details>
 		</td>
-		<td cond="$list_config['nick_name']"><a href="#popup_menu_area" class="member_{$document->get('member_srl')}" onclick="return false">{$document->getNickName()}</a></td>
+		<td class="author" cond="$list_config['nick_name']"><a href="#popup_menu_area" class="member_{$document->get('member_srl')}" onclick="return false">{$document->getNickName()}</a></td>
 		<td cond="$list_config['regdate']">{$document->getRegdate('Y.m.d')}</td>
 		<td cond="$list_config['last_update']">{getTimeGap($document->get('last_update'), "y.m.d")}</td>
-		<td cond="$list_config['readed_count'] && $val->idx==-1">{$document->get('readed_count')>0?$document->get('readed_count'):'0'}</td>
 		<td cond="$grant->manager" class="check m_no"><input type="checkbox" name="cart" value="{$document->document_srl}" class="iCheck" title="Check This Article" onclick="doAddDocumentCart(this)" checked="checked"|cond="$document->isCarted()" /></td>
 	</tr>
 <!--@if($mi->default_style=='list')--><!--@else--></table><!--@end-->
