--- a/_read.html
+++ b/_read.html
@@ -30,7 +30,7 @@
 </script>
 
 <!--// 게시판 본문글 상단에 풀립 판넬 -->
-<div style="margin-top:-20px">
+<div cond="($mi->top_panel_text && $mi->panel_read == '' && $mi->panel_select =='J') || ($mi->top_panel_text && $mi->panel_read == '' && $mi->panel_select =='H')" style="margin-top:-20px">
 	<include cond="$mi->top_panel_text && $mi->panel_read == '' && $mi->panel_select =='J'" target="top_toggleJ.html" />
 	<include cond="$mi->top_panel_text && $mi->panel_read == '' && $mi->panel_select =='H'" target="top_toggleH.html" />
 </div>
