역추천 가져오는 방식 변경

--- a/_list_normal.html
+++ b/_list_normal.html
@@ -3,7 +3,9 @@
 	<!--@else-->
 	{@ $order_icon="up"; $order_type="desc"; }
 <!--@end-->
-
+{@
+	$voteData = Rhymix\Modules\Yeokbox\Models\Vote::getVoteList();
+}
 <p cond="!$document_list && !$notice_list" class="no_doc">{$lang->no_documents}</p>
 <div style="overflow-x: auto;">
 	<table cond="$document_list || $notice_list" class="bd_lst bd_tb_lst bd_tb">
@@ -55,7 +57,7 @@
 								<a cond="$document->getCommentCount()" href="{getUrl('document_srl', $document->document_srl)}#{$document->document_srl}_comment" class="replyNum" title="{$lang->comment}">{$document->getCommentCount()}</a>
 								<a cond="$document->getTrackbackCount()" href="{getUrl('document_srl', $document->document_srl)}#{$document->document_srl}_trackback" class="trackbackNum" title="{$lang->trackback}">{$document->getTrackbackCount()}</a>
 							</block>
-							<span class="extraimages"><i class="fa fa-heart liked" cond="$document->get('voted_heart')"></i>{$document->printExtraImages(60*60*$mi->duration_new)}</span>
+							<span class="extraimages"><i class="fa fa-heart liked" cond="array_key_exists($document->document_srl, $voteData) && $voteData[$document->document_srl] == 'Y'"></i>{$document->printExtraImages(60*60*$mi->duration_new)}</span>
 						</td>
 					</block>
 					<td class="author" cond="$val->type=='nick_name' && $val->idx==-1"><span><a href="#popup_menu_area" class="member_{$document->get('member_srl')}" onclick="return false">{$document->getNickName()}</a></span></td>
