--- a/_list_normal.html
+++ b/_list_normal.html
@@ -3,9 +3,6 @@
 	<!--@else-->
 	{@ $order_icon="up"; $order_type="desc"; }
 <!--@end-->
-{@
-	$voteData = Rhymix\Modules\Yeokbox\Models\Vote::getVoteList();
-}
 <p cond="!$document_list && !$notice_list" class="no_doc">{$lang->no_documents}</p>
 <div style="overflow-x: auto;">
 	<table cond="$document_list || $notice_list" class="bd_lst bd_tb_lst bd_tb">
@@ -57,8 +54,7 @@
 								<a cond="$document->getCommentCount()" href="{getUrl('document_srl', $document->document_srl)}#{$document->document_srl}_comment" class="replyNum" title="{$lang->comment}">{$document->getCommentCount()}</a>
 								<a cond="$document->getTrackbackCount()" href="{getUrl('document_srl', $document->document_srl)}#{$document->document_srl}_trackback" class="trackbackNum" title="{$lang->trackback}">{$document->getTrackbackCount()}</a>
 							</block>
-							<!-- voteData {$voteData[$document->document_srl]} -->
-							<span class="extraimages"><i class="fa fa-heart liked" cond="$voteData[$document->document_srl] == 'Y'"></i>{$document->printExtraImages(60*60*$mi->duration_new)}</span>
+							<span class="extraimages">{$document->printExtraImages(60*60*$mi->duration_new)}</span>
 						</td>
 					</block>
 					<td class="author" cond="$val->type=='nick_name' && $val->idx==-1"><span><a href="#popup_menu_area" class="member_{$document->get('member_srl')}" onclick="return false">{$document->getNickName()}</a></span></td>
@@ -121,7 +117,8 @@
 									</span>
 								</a>
 							<!--@end-->
-
+							<!-- {$document->get('voted_heart')} -->
+							<i class="fa fa-heart liked" cond="$document->get('voted_heart') == 'Y'"></i>
 							<!--// 조회수별 이미지출력 -->
 							<!--@if($mi->Icons_Count!='' && ($document->get('readed_count') > $mi->readed_count_hot))-->
 								<!--@if($mi->hot_image)--><img src="{$mi->hot_image}" alt="" title="hot" />
