--- a/_read.html
+++ b/_read.html
@@ -55,19 +55,19 @@
 				</div>
 				<h1 class="np_18px">
 					<a href="{$oDocument->getPermanentUrl()}" style="font-size:1.2em; font-weight:bold">
-						<!--@if($document->isSecret() && !$document->isGranted())-->
+						<!--@if($oDocument->isSecret() && !$oDocument->isGranted())-->
 							비밀글입니다.
 						<!--@else-->
 							<!--// 확장변수 제목 대처 -->
 							<!--@if($mi->extra_title == '')-->
-								<!--@if($document->getTitle() !== '.')-->
-									{$document->getTitle()}
+								<!--@if($oDocument->getTitle() !== '.')-->
+									{$oDocument->getTitle()}
 								<!--@else-->
 									{$mi->title_default_text}&nbsp;
 								<!--@end-->
 							<!--@else-->
-								<!--@if($document->getExtraEidValueHTML($mi->title_name))-->
-									{$document->getExtraEidValueHTML($mi->title_name)}
+								<!--@if($oDocument->getExtraEidValueHTML($mi->title_name))-->
+									{$oDocument->getExtraEidValueHTML($mi->title_name)}
 								<!--@else-->
 									{$mi->title_default_text}&nbsp;
 								<!--@end-->
