--- a/_read.html
+++ b/_read.html
@@ -77,7 +77,7 @@
 				</h1>
 			</div>
 			<div class="btm_area clear">
-				<!--@if($document->isSecret() && !$document->isGranted())-->
+				<!--@if($oDocument->isSecret() && !$oDocument->isGranted())-->
 				<div class="side">작성자 비공개</div>
 				<!--@else-->
 				<img cond="$mi->rd_profile=='Y' && $oDocument->getProfileImage()" class="img fl" src="{$oDocument->getProfileImage()}" alt="profile" title="{$oDocument->getNickName()}" />
